<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.TickerFragment"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/tickerTime"
        android:background="@drawable/cardviewbackground">

        <TextView
            android:id="@+id/payment"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/payment_currency"
            android:textColor="@color/Dark"
            android:textSize="28dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/closing_Price"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/closing_price"
            android:textSize="20dp"
            android:textColor="@color/Dark"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/units_traded_24H"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/units_traded_24H" />

        <TextView
            android:id="@+id/min_Price"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_below="@+id/closing_Price"
            android:layout_toStartOf="@+id/max_Price"
            android:layout_marginEnd="10dp"
            android:gravity="right"
            android:paddingTop="4dp"
            android:text="@string/min_price"
            android:textColor="@color/lowPrice"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/max_Price"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/max_Price"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_below="@+id/closing_Price"
            android:layout_toStartOf="@+id/acc_trade_value_24H"
            android:gravity="left"
            android:paddingTop="4dp"
            android:text="@string/max_price"
            android:textColor="@color/highPrice"
            android:textSize="14dp"
            android:textStyle="bold"
            android:layout_toLeftOf="@+id/acc_trade_value_24H" />

        <TextView
            android:id="@+id/units_traded_24H"
            android:layout_width="65dp"
            android:layout_height="15dp"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/fluctate"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:gravity="right"
            android:text="@string/units_traded_24H"
            android:textSize="12dp"
            android:layout_toLeftOf="@+id/fluctate"
            android:layout_marginRight="5dp" />

        <TextView
            android:id="@+id/acc_trade_value_24H"
            android:layout_width="65dp"
            android:layout_height="15dp"
            android:layout_below="@+id/units_traded_24H"
            android:layout_toStartOf="@+id/fluctate"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:gravity="right"
            android:text="@string/acc_trade_value_24H"
            android:textSize="12dp"
            android:layout_toLeftOf="@+id/fluctate"
            android:layout_marginRight="5dp" />

        <TextView
            android:id="@+id/fluctate"
            android:layout_width="60dp"
            android:layout_height="15sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:gravity="right"
            android:text="@string/fluctate"
            android:textSize="12dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp" />

        <TextView
            android:id="@+id/fluctate_rate"
            android:layout_width="60dp"
            android:layout_height="15sp"
            android:layout_below="@+id/fluctate"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:textStyle="bold"
            android:gravity="right"
            android:text="@string/fluctate_rate"
            android:textSize="12dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp" />

    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tickerRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_weight="1">
<!--        android:background="#90ABFA"-->

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>